<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.flow.hugh.viewmodel.MainViewModel" />
        <variable
            name="adapter"
            type="com.flow.hugh.adapter.MovieAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MovieFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="@dimen/margin_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@style/solid_button"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.7"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout">

            <com.google.android.material.chip.Chip
                android:id="@+id/genreChip"
                style="@style/chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/countryChip"
                style="@style/chip"
                android:layout_marginStart="@dimen/margin_extra_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/resetChip"
                style="@style/chip"
                android:layout_marginStart="@dimen/margin_extra_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adapter="@{adapter}"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>